--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 
 html {
   font-size: 10px;
-  background-color: #dde;
+  background-color: #2d4221;
 }
 
 body {
@@ -18,29 +18,29 @@ body {
 
 /* || typography */
 
-font[size="7"], font[size="6"], font[size="5"] {
+h1, h2, h3 {
   font-family: 'Sonsie One', cursive;
   color: #2a2a2a;
 }
 
 p, input, li, table, label {
   font-family: 'Open Sans Condensed', sans-serif;
-  color: #2a2a2a;
+  color: #2d4221;
 }
 
-font[size="7"] {
+h1 {
   font-size: 4rem;
   text-align: center;
   color: white;
   text-shadow: 2px 2px 10px black;
 }
 
-font[size="6"] {
+h2 {
   font-size: 3rem;
   text-align: center;
 }
 
-font[size="5"] {
+h3 {
   font-size: 2.2rem;
 }
 
@@ -52,7 +52,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: green;
+  background-color: #d7f1ec;
 }
 
 article, footer, .secondary {
@@ -173,7 +173,6 @@ audio {
 /* Comments styling */
 
 .comments {
-  background-color: #def;
   padding: 10px;
 }
 
@@ -247,4 +246,20 @@ audio {
 
 .comment-container li p:nth-child(2) {
   flex: 5;
+}
+.secondary li {
+  list-style: none;
+  color: black;
+}
+.secondary li a {
+  color: black;
+  text-decoration: none;
+}
+.secondary li a:hover {
+  color: black;
+  text-decoration: underline;
+}
+.nav li a:hover {
+text-decoration: underline;
+color: black;
 }
